--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,8 @@
 						This site is a demonstration of the '<a href="javascript:openNewTab('https://github.com/naTmeg/ScriptedAmigaEmulator')">SAE</a>' project,
 						an experimental <a href="javascript:openNewTab('http://en.wikipedia.org/wiki/Amiga')">Amiga</a> emulator in pure javascript and HTML5.<br />
 						For details, please refer to the <a href="javascript:openNewTab('readme.htm')">readme</a> file.<br /><br />
-						Below you find a small collection of games and demos to play...
+						Below you find a small collection of games and demos to play...<br />
+						<span class="info">(Use Google Chrome for best results)</span>
 					</div>			
 					<div style="height:20px"></div> 
 					<div class="config_simple_hof">
@@ -563,7 +564,7 @@
 			
 			<div style="height:10px"></div> 
 			<div id="foot" class="foot">
-				<span class="gray">&#169;2012 Rupert Hausberger</span> | 
+				<span class="gray">&#169;2012-2013 Rupert Hausberger</span> | 
 				<a href="javascript:openNewTab('https://github.com/naTmeg/ScriptedAmigaEmulator')">Source</a> | 
 				<a href="javascript:openNewTab('readme.htm')">Readme</a>
 			</div>
