--- a/readme.htm
+++ b/readme.htm
@@ -93,9 +93,15 @@
 			<ul>
 				<li><span class="fwb">Known bugs/problems</span>
 					<ul>
-						<li>Fast blinking sprites are not displayed if 'Frameskip' is active.</li>
-						<li>Copper initiated color-changes within a scanline are not recognized.</li>
-						<li>Left/right shift/alt/ctrl are the same. That's a browser 'feature' and can't be fixed for now.</li>
+						<li>There may be graphics-errors:
+						<ul>
+							<li>Graphics may be at a wrong position or a wrong color.</li>
+							<li>Fast blinking sprites are not displayed if 'Frameskip' is active.</li>
+							<li>Copper initiated color-changes within a scanline are not recognized.</li>
+							<li>The next update (0.8) will deal with this.</li>
+						</ul>
+						</li>
+						<li>Left/right shift/alt/ctrl are the same. That's a browser 'feature' and can't be fixed.</li>
 					</ul>
 				</li>
 			</ul>
