--- a/readme.htm
+++ b/readme.htm
@@ -18,12 +18,8 @@
 				<div class="noscript">This site does require javascript, obviously :)</div>  	
 			</noscript>
 			<div style="height:8px"></div> 		
-			<img src="images/logo.png" alt="Scripted Amiga Emulator" />
-			<div class="acmsg">
-				<i>Experimental</i> <a href="javascript:openNewTab('http://en.wikipedia.org/wiki/Amiga')">Amiga</a> emulator in pure JavaScript and HTML5
-			</div>		
-		</div>	  					
-		<div style="height:8px"></div> 			
+			<img src="images/logo.png" alt="Scripted Amiga Emulator" />		
+		</div>	  						
 		<div class="readme">	
 			<table>
 				<tr>
@@ -117,23 +113,27 @@
 				</li>
 			</ul>
 			<ul>
-				<li><span class="fwb">Thanks</span>
+				<li><span class="fwb">License</span>
 					<ul>
-						<li><a href="javascript:openNewTab('http://www.amigaemulator.org')">Bernd Schmidt</a></li>
-						<li><a href="javascript:openNewTab('http://winuae.net')">WinUAE</a> team</li> 
-						<li><a href="javascript:openNewTab('http://aros.org')">AROS</a> team</li>
+						<li><a href="javascript:openNewTab('gpl.htm')">GPL</a></li>
 					</ul>
 				</li>
 			</ul>
 			<ul>
-				<li><span class="fwb">License</span>
+				<li><span class="fwb">Thanks</span>
 					<ul>
-						<li>This is a free project.</li>
-						<li>You may use the emulator in your own website.</li>
-						<li>If you use the emulator in your own website, you must provide a link to this homepage.</li>
-						<li>If you use the emulator in your own website, you must not change the copyright header in the source-files.</li>
-						<li>Commercial use in any form is prohibited. This includes donations.</li>
-						<li>No warranty expressed or implied. Use at your own risk.</li>
+						<li><a href="javascript:openNewTab('http://www.amigaemulator.org')">Bernd Schmidt</a></li>
+						<li><a href="javascript:openNewTab('http://winuae.net')">WinUAE team</a></li> 
+						<li><a href="javascript:openNewTab('http://aros.org')">AROS team</a></li>
+					</ul>
+				</li>
+			</ul>
+			<ul>
+				<li><span class="fwb">Some stats</span>
+					<ul>
+						<li>The first public version had ~13.000 lines of code, currently ~23.500</li>
+						<li>About 5 months development time for the first version.</li>
+						<li>About the half of the first version was written from scratch, the rest was ported from WinUAE.</li>
 					</ul>
 				</li>
 			</ul>
@@ -210,6 +210,18 @@
 			<ul>
 				<li><span class="fwb">History</span>
 					<ul>
+						<li>0.8.1 (19.01.2013):
+							<ul>	
+								<li>Common
+									<ul>
+										<li>The license of the project is now GPL.</li>
+										<li>Changed and updated front-end.</li>
+										<li>Removed the drivers-info box. I did'nt like it that way.</li>
+									</ul>
+								</li>			
+							</ul>
+						</li>                                                                               
+						<li style="list-style-type:none"><br/></li>
 						<li>0.8.0 (16.01.2013):
 							<ul>
 								<li>Display
