--- a/index.htm
+++ b/index.htm
@@ -45,10 +45,10 @@
 			<div id="config">			  	
 				<div id="config_simple">	
 					<h3>Welcome!</h3>
-					This site is the homepage of the project <a href="javascript:openNewTab('https://github.com/naTmeg/ScriptedAmigaEmulator')">SAE</a>,
-					an <i>experimental</i> <a href="javascript:openNewTab('http://en.wikipedia.org/wiki/Amiga')">Amiga</a> emulator in pure JavaScript and HTML5.<br />
-					SAE is based on <a href="javascript:openNewTab('http://winuae.net')">WinUAE</a> and does use the <a href="javascript:openNewTab('http://aros.org')">AROS</a>-kickstart replacement. 
-					For more details, please see the <a href="javascript:openNewTab('readme.htm')">description</a>.<br /> 					
+					This site is the homepage of the project <a target="_blank" href="https://github.com/naTmeg/ScriptedAmigaEmulator">SAE</a>,
+					an <i>experimental</i> <a target="_blank" href="http://en.wikipedia.org/wiki/Amiga">Amiga</a> emulator in pure JavaScript and HTML5.<br />
+					SAE is based on <a target="_blank" href="http://winuae.net')">WinUAE</a> and does use the <a href="javascript:openNewTab('http://aros.org">AROS</a>-kickstart replacement. 
+					For more details, please see the <a target="_blank" href="readme.htm">description</a>.<br /> 					
 					<br />     		
 					Below you find a collection of pre-installed games and demos to play and test. Press the 'Config'-button to use your own roms or file-images, with advanced options.<br />
 					<br />
@@ -182,7 +182,7 @@
 								<span id="cfg_chipset_cl_grp">								 
 									<select id="cfg_chipset_cl" size="1">
 										<option value="1">Sprites only</option>
-										<option value="2">Sprites & Playfield (recommended)</option>
+										<option value="2">Sprites &amp; Playfield (recommended)</option>
 										<option value="3">Full</option>
 									</select>
 								</span><br />
@@ -613,8 +613,8 @@
 			<div id="foot" class="foot" style="line-height:14px">
 				<span class="gray">2012-2013 Rupert Hausberger</span> | 
 				<span class="gray">ver 0.8.1</span> | 
-				<a href="javascript:openNewTab('https://github.com/naTmeg/ScriptedAmigaEmulator')">Source-code</a> | 
-				<a href="javascript:openNewTab('readme.htm')">Description</a>
+				<a target="_blank" href="https://github.com/naTmeg/ScriptedAmigaEmulator">Source-code</a> | 
+				<a target="_blank" href="readme.htm">Description</a>
 			</div>		
 		</div>
 	
